2008-XX-XX:
    * version 2.0 (probably)
    * IMPORTANT: AlwaysHint modes were removed as they didn't make too
      much sense with the new hint system
    * IMPORTANT: command actions now take an args object, returned from
      commands.parseArgs, as their first argument. This will break any commands
      not using the args parser explicitly.  The old string value is now
      available via args.string.
    * IMPORTANT: 'verbose' is now used for message levels. Logging is
      controlled by the extensions.liberator.loglevel preference.
    * IMPORTANT: :viusage and :exusage now jump to the help index, use the
      special versions for the old behavior
    * IMPORTANT: renamed Startup and Quit autocmd events to VimperatorEnter and
      VimperatorLeave respectively
    * :buffers supports a filter now to only list buffers matching filter (vim
      incompatible, but consistent with other commands)
    * Favicon support in many places
    * add 'Fullscreen' autocommmand
    * add :colorscheme
    * multibyte support for hints (thanks Xie&Tian)
    * add 'exrc'
    * add 'errorbells'
    * add shell command completion for :!
    * add :map <silent> to prevent a mapping from being echoed
    * add guioptions=nN to number tabs
    * add :loadplugins command
    * add . mapping
    * add N% normal mode command
    * add interpolation for items such as <url> to autocommands
    * add -nargs, -complete, -bang, and -count attribute support to :command
    * much improved completion support, including javascript, option, and search keyword
    * add <PageUp>/<S-Up> and <PageDown>/<S-Down> command-line mappings for
      selecting the previous and next history items
    * remove 'hintstyle', 'hlsearchstyle' and 'visualbellstyle' - use
      :highlight {Hint,Search,Bell}
    * add :highlight
    * add :optionusage
    * add :doautocmd and :doautoall
    * add :style and :delstyle commands, allow :so to source stylesheets
    * add DOMLoad autocmd event